# hackery2

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .gitmodules  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  ambient-agent.service  init  install.sh  readme.md  setup.cfg  setup.py  tmux_reload_settings.sh
bfg/: README.md  main.py
btrfs-vcs/: main.py
data/: .gitignore  README.md  fo.sh  nvidia_reset.sh  setup
docs/: conf.py  installation.rst  usage.rst
fairo/: voice_coding_talon_cursorless  yggdrasil_conf.py
hackery3/: cyc  g1  note-taking
notes/: .gitignore  CO2.md  DotNet  README.md  README.txt  agi  ai  apt  armor  avahi  backup  bubliny  bun  chatidiot  cicd  ciclop  cnc  collaborative_editors  computer-use  cyc  data  data_lake  databases  debugging  deduplication  docker  dxx  elektro  emacsspeak  esp  ev  event_stream  firefox  fish  g1  games  gardening  git  github_backup  gpt  (+83 more)
notes2/: .gitignore  CO2.md  ChatGPT  Random-links.md  air  assistant_notes  auth  backlight  bldc  browser_based_editor_widgets  cctv  ciclop  copilot  data  deduplication  displaylink  docker  elektro  fish  frontend  function_graphs.md  g1  gardening  git  health  hw  index.md  infra  inventory_management  iot  itsm  jamming  jamulus  kubernetes  meta  minimal_distros  monitoring  mooltitab  multihead  (+44 more)
src/schnabel/: README.md  pyproject.toml
src/schnabel/docs/: decisions.md  design.md  notes  prior-art.md  roadmap.md  vision.md
src/schnabel/schnabel/: __init__.py  events.py  vocab.py
src/schnabel/tests/: test_events.py
(+908 files in other folders)
