[project]
name = "schnabel"
version = "0.0.1"
description = "SDK for cooperating processes to share quadstore-shaped runtime state."
readme = "README.md"
requires-python = ">=3.8.1"
authors = [
    { name = "koom" },
]
dependencies = [
    "rdflib>=7.0",
    "json5>=0.9",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schnabel"]

[tool.uv]
package = true
